--- a/KeywordFinder/KeywordFinder.csproj
+++ b/KeywordFinder/KeywordFinder.csproj
@@ -44,6 +44,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ArgumentBuilder.cs" />
     <Compile Include="frmMain.cs">
       <SubType>Form</SubType>
     </Compile>
